# LatheOS

./: .gitignore  Makefile  README.md  RELEASE_README.md  SETUP.md  configuration.nix  flake.nix
.github/workflows/: nix.yml  release.yml
daemon/: pyproject.toml
daemon/cam_daemon/: __init__.py  __main__.py  agents.py  audio_io.py  control_socket.py  executor.py  wake.py  ws_client.py
daemon/camctl/: __init__.py  __main__.py
daemon/tests/: test_control_socket.py  test_executor.py  test_ws_client.py
docs/: LATHEOS_VIBE_PLATFORM.md  PLAN.md  REPO_STRUCTURE.md
home/sway/: config
installer/linux/: install-latheos.sh
installer/macos/: install-latheos.command
installer/windows/: Install-LatheOS.ps1  README.md
launcher/: README.md
launcher/linux/: launch-latheos.sh
launcher/macos/: launch-latheos.command
launcher/windows/: Launch-LatheOS.bat  README.md
modules/: audio.nix  cam-daemon.nix  embedded-shell.nix  greeter.nix  home.nix  iso.nix  local-llm.nix  storage.nix  sway.nix  vault.nix
platform/: README.md
platform/embedded-shell/: README.md  pyproject.toml
platform/embedded-shell/lathe_shell/: __init__.py  __main__.py  app.py  ascii_art.py  chat.py  components_pane.py  hardware.py  hud.py  llm.py  terminal_pane.py  theme.py
scripts/: build-latheos-iso.sh  build-usb-image.sh  ci-eval.sh  fetch-nixos-base.sh  flash-usb.sh  prefetch-models.sh
