[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lathe-shell"
version = "0.1.0"
description = "LatheOS embedded vibe-coding shell — ASCII Jarvis HUD + chat + terminal"
readme = "README.md"
requires-python = ">=3.11"
# Runtime dependencies. All of these are in nixpkgs (python3Packages.*) so the
# module can build the package without hitting PyPI during a nixos-rebuild.
dependencies = [
    "textual>=0.82",        # TUI framework — panes, reactive widgets, mouse
    "rich>=13.7",           # ANSI rendering primitives
    "httpx>=0.27",          # async HTTP to local Ollama
    "orjson>=3.10",         # fast JSON
    "psutil>=5.9",          # portable hw/process introspection
    "structlog>=24.4",      # structured logging (shared with cam-daemon)
]

[project.scripts]
# Entrypoint wired by modules/embedded-shell.nix as `lathe`.
lathe = "lathe_shell.__main__:main"

[tool.setuptools.packages.find]
include = ["lathe_shell*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]
